Release version 1.8.2.RELEASE